--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon --exec babel-node src/server.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/vinhtrnh/nodejs-basic/issues"
   },
-  "homepage": "https://github.com/vinhtrnh/nodejs-basic#readme"
+  "homepage": "https://github.com/vinhtrnh/nodejs-basic#readme",
+  "dependencies": {
+    "@babel/core": "7.15.5",
+    "@babel/node": "7.15.4",
+    "@babel/preset-env": "7.15.6",
+    "body-parser": "1.19.0",
+    "ejs": "3.1.6",
+    "express": "4.17.1",
+    "nodemon": "2.0.12"
+  }
 }
